[gd_scene load_steps=4 format=3 uid="uid://mmxfpe4nahxg"]

[ext_resource type="Script" uid="uid://cknrwswygjvxc" path="res://script/menu/pause_menu.gd" id="1_to0sn"]
[ext_resource type="FontFile" uid="uid://c6drrdopvgm8h" path="res://BabaMediumPixels.ttf" id="1_usgfj"]
[ext_resource type="Script" uid="uid://bppaapt00u4i" path="res://script/button.gd" id="2_vag6w"]

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_to0sn")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1153.0
offset_bottom = 648.0
color = Color(0.364706, 0.364706, 0.364706, 0.317647)

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -100.0
offset_right = -59.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme_override_constants/separation = 21
vertical = true
script = ExtResource("2_vag6w")
intensity = -1.3

[node name="menu" type="Button" parent="BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_usgfj")
theme_override_font_sizes/font_size = 21
text = "Retour au menu"

[node name="BoxContainer2" type="BoxContainer" parent="."]
offset_left = 418.0
offset_top = 373.0
offset_right = 550.0
offset_bottom = 427.0
scale = Vector2(2.5, 2.5)
theme_override_constants/separation = 21
vertical = true
script = ExtResource("2_vag6w")
intensity = -1.3

[node name="quitter" type="Button" parent="BoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_usgfj")
theme_override_font_sizes/font_size = 15
text = "Quitter"

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -311.0
offset_right = 2381.0
offset_bottom = 322.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("1_usgfj")
theme_override_font_sizes/font_size = 500
text = "UPSIDER"

[node name="mort" type="Label" parent="."]
offset_left = 464.0
offset_top = 140.0
offset_right = 701.0
offset_bottom = 180.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_usgfj")
theme_override_font_sizes/font_size = 25
text = "nombre de mort : 0"

[node name="confirmation" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 325.0
offset_right = 680.0
offset_bottom = 365.0
scale = Vector2(5, 5)

[node name="ColorRect" type="ColorRect" parent="confirmation"]
layout_mode = 0
offset_left = -78.0
offset_top = -34.0
offset_right = 54.0
offset_bottom = 36.0
color = Color(0.372549, 0.372549, 0.372549, 0.764706)

[node name="Label" type="Label" parent="confirmation"]
layout_mode = 0
offset_left = -75.0
offset_top = -21.0
offset_right = 59.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("1_usgfj")
theme_override_font_sizes/font_size = 8
text = "Etes-vous sur de vouloir quitter ?"

[node name="BoxContainer" type="BoxContainer" parent="confirmation"]
layout_mode = 0
offset_left = -34.0
offset_top = 4.0
offset_right = 12.0
offset_bottom = 22.0
script = ExtResource("2_vag6w")

[node name="oui" type="Button" parent="confirmation/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_usgfj")
theme_override_font_sizes/font_size = 8
text = "Oui"

[node name="non" type="Button" parent="confirmation/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_usgfj")
theme_override_font_sizes/font_size = 8
text = "Non"

[connection signal="pressed" from="BoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="BoxContainer2/quitter" to="." method="_on_quitter_pressed"]
[connection signal="pressed" from="confirmation/BoxContainer/oui" to="." method="_on_oui_pressed"]
[connection signal="pressed" from="confirmation/BoxContainer/non" to="." method="_on_non_pressed"]
